# opengrad

./: .gitignore  LICENSE  README.md  main.ipynb  my_graph  pyproject.toml  scratch.ipynb  test.py
examples/: moons_demo.py  xor_demo.py
opengrad/: __init__.py  nn.py  optim.py  tensor.py  viz.py
tests/: test_tensor.py
