[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "opengrad"
version = "0.1.0"
description = "A small, readable, numpy-backed autograd engine and neural network library, built for learning and free for everyone."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [
    { name = "Olawoye Taofeek" }
]
dependencies = [
    "numpy>=1.20",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
viz = ["graphviz"]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com//opengrad"
Repository = "https://github.com//opengrad"

[tool.setuptools.packages.find]
include = ["opengrad*"]
